@@ -99,7 +99,11 @@ Yes. To connect your social accounts to Yotpo, just log into yotpo.com, and clic
 * Replace yotpo.phar file with Yotpo.php, and change minimum requirements from PHP 5.3.0 to PHP 5.2.0 and above .
 * Ensure that the minimum requirements are met.
 = 1.0.5 - 31/07/2013 =
+* Disable Mail after purchase and widget from products which are not checked with 'Enable reviews' checkbox.
 * Fix bug: remove short codes html tags and HTML entities from fields which contain data from users in the exported reviews.
+* Fix bug: Replace <br> tags with new line, when exporting reveiews.
+* Fix bug: Past orders issues.
+
 
  
 
